and more bug fixes

--- a/app/templates/comms/create-bar.html
+++ b/app/templates/comms/create-bar.html
@@ -5,7 +5,7 @@
 			</figure>
 		<div class="field is-expanded has-addons" style="float:right; width: 100%;">
                   <p class="control has-icons-left" style="width: 100%;">
-                    <input id="create-bar-input" class="input" type="location" placeholder='Create {% if what %}{{what}}{% endif %}'>
+                    <input id="create-bar-medium" class="input" type="location" placeholder='Create {% if what %}{{what}}{% endif %}'>
                     <span class="icon is-small is-left">
 	                    	<i class="fa fa-pencil"></i>
 	                  	</span>
