--- a/app/templates/profiles/user/edit.html
+++ b/app/templates/profiles/user/edit.html
@@ -8,7 +8,7 @@
         </span>
       </a>
       <p class="modal-card-title" id="header">Edit profile</p>
-      <button class="button is-info is-normal is-rounded" id="save-button">
+      <button class="button loading-button is-info is-normal is-rounded" id="save-button">
         <span>Save</span>
       </button>
   </header>
