--- a/app/templates/profiles/tabs.html
+++ b/app/templates/profiles/tabs.html
@@ -19,7 +19,7 @@
           <ul>
 
         <li><a>
-        <span class="icon is-small"><i class="fas fa-caret-down" aria-hidden="true"></i></span>
+        <span class="icon is-small"><i class="fas fa-caret-up" aria-hidden="true"></i></span>
         <span class="tabtext">{{tabhidename}}</span>
       </a></li>
     </ul>
