--- a/app/templates/profiles/idea/tabs/tab1.html
+++ b/app/templates/profiles/idea/tabs/tab1.html
@@ -1,8 +1,8 @@
-{% for collaborator in project.group.members %}
+{% for collaborator in idea.group.members %}
       {% with profile=collaborator %}
         {% include 'profiles/mini-profile.html' %}
         {% endwith %}
       {% endfor %}
-{% if current_user in project.group.members and project.group.member_has_role(member=current_user, role_title="Master") %}
+{% if current_user in idea.group.members and idea.group.member_has_role(member=current_user, role_title="Master") %}
       <a id="members-button"><div class="add-specific-button"><span>Add member</span></div></a>
 {% endif %}
