--- a/app/templates/profiles/idea/tabs/tab3.html
+++ b/app/templates/profiles/idea/tabs/tab3.html
@@ -1,3 +1,3 @@
-{% if current_user in project.group.members %}
+{% if current_user in idea.group.members %}
       <div class="add-specific-button" id="add-comm-button"><span>Add comm</span></div>
 {% endif %}
