--- a/app/templates/profiles/idea/profile.html
+++ b/app/templates/profiles/idea/profile.html
@@ -70,7 +70,7 @@
   {% endif %}
   {% endraw  %}
   -->
-
+{% include 'profiles/idea/key-info.html' %}
 {% include "profiles/idea/tabs/tabs.html" %}
 
 {% endblock %}
@@ -94,6 +94,8 @@
 <!-- Probably good for now to have this below-->
 
 <link rel="stylesheet" href="/static/css/profiles/profile.css">
+<link rel="stylesheet" href="/static/css/profiles/idea/idea.css">
+
 <link rel="stylesheet" href="/static/css/profiles/mini-profile.css">
 <link rel="stylesheet" href="/static/css/profiles/edit.css">
 <link rel="stylesheet" href="/static/css/profiles/photo.css">
