loading search button on the map

--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -178,6 +178,7 @@ $(document).on("click", "#search-button", function() {
   $("#radius-value").blur();
   $("#age-value0").blur();
   $("#age-value1").blur();
+  $(this).addClass('is-loading');
   explore();
 
 });
