--- a/app/templates/profiles/user/tabs/tabs.html
+++ b/app/templates/profiles/user/tabs/tabs.html
@@ -1,3 +1,3 @@
-{% with tab1contentpath="profiles/user/tabs/tab1.html", tab2contentpath="profiles/user/tabs/tab2.html", tab1name="Allies", tab2name="Ideas", tab1icon="fas fa-user-friends", tab2icon="fas fa-pencil-alt" %}
+{% with tab1contentpath="profiles/user/tabs/tab1.html", tab2contentpath="profiles/user/tabs/tab2.html", tab1name="Allies", tab2name="Ideas", tab1icon="fas fa-user-friends", tab2icon="fas fa-lightbulb" %}
 {% include "profiles/tabs.html" %}
 {% endwith %}
